	+ added settings menu
	+ added SetLayout() method for easy instatiation of DockCtrl class.
	+ self-explanatory example code is added to the package.
	* DockPane helper class renamed to PaneFrame;
	* removed Splitter ctrl code from DockPane and made into a seperate custom class PaneSplitter.
	* control panel is heavily improved.
	  from now on, control panel has full access and control over the docked windows.
	- Fixed most of the sizing issues by adding size hint methods (see DockableCtrl.cpp).
	- Many internal bugfix and cleanup.
	
0.51
	> public release name DockCtrl DEV802b.2
	--------------------------------------------------------------------------------------------
2/19/2008
	- fixed a nasty bug in TabWindow Detach() method which led to stack overflow error.
	  (However, this feature is still in it'a alpha stage. So, it is experimental. There may very well
	  be bugs... USE IT AT YOUR RISK!)
	- fixed tab dragging bug which cause to trigger the StartWindowDrag() in tab frame's empty area.
	- ResetLayout() method fixed and renamed to ResetWidgetLayout(). 
	- the tabs and tabbed window title showed incorrect info(title, icon) in  "nested tabbing" mode
	  and in "tabbed autohide" mede. this bug is fixed for both mode by adding 
	  RefreshTabWindowLabel() method to TabWindow class.
	- other internal and minor bugfixes.
	* removed irrelevant packages from the assembly :) (remnants of my early experiments...)
	* DockCtrlExample is added to the package. now the main package is named DockCtrl Dev802b.2
	* default and enhanced background skins are polished. now they have more native look.
2/20/2008
	+ german translation added (Thanks to Masu).
	- fixed "call by reference errors" under MingW 3.4.2 (Thanks to Masu)
	- Tab text alignment, close button detection bugs and scrollbar separator line painting are fixed (Thank to Unodgs).
	- fixed autohide bug which caused the framework fall into an infinite loop when trying to hide a 2+ level nested tabs.
